--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <button class="dropbtn">Select Actor</button>
       <div class="dropdown-content">
         <a href="#" id="russia">Russia</a>
-        <a href="#" id="kingdom">United Kingdom</a>
-        <a href="#" id="nations">United Nations</a>
+        <!-- <a href="#" id="kingdom">United Kingdom</a>
+        <a href="#" id="nations">United Nations</a> -->
         <a href="#" id="china">China</a>
       </div>
     </div>
@@ -72,6 +72,12 @@
         </div>
         <div class="trigger four" data-step="3" style="height: 200px;">
         </div>
+      </div>
+    </div>
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+        Russia and other UN Security Council Permanent Members 
       </div>
     </div>
 
