--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
     </div>
 
     <div id="separator05" class="overview">
-      <div id="ch2_div">
-        Russia and other UN Security Council Permanent Members 
+      <div id="ch2_div" class="council_separator">
       </div>
     </div>
 
