--- a/index.html
+++ b/index.html
@@ -184,27 +184,17 @@
 
     <div id="separator1">
       <div style="position: absolute; top: 80px; width: 100%; text-align: center;">
-        <h3>Read our research on Russia and its approaches to conflict, peace processes and mediation:</h3>
+        <h3 id="research_header"></h3>
       </div>
-      <div id="vik">
-        <a href="https://peacerep.org/publication/third-parties-peace-agreements-data-trends/" target="_blank"><img
-            id="publications" src="img/m1.png" /></a>
+      <div id="vik1">
       </div>
-      <div id="vik">
-        <a href="https://peacerep.org/publication/non-western-approaches-to-peacemaking-and-peacebuilding-state-of-the-art-and-an-agenda-for-research/"
-          target="_blank"><img id="publications" src="img/m2.png" /></a>
+      <div id="vik2">
       </div>
-      <div id="vik">
-        <a href="https://www.taylorfrancis.com/chapters/edit/10.4324/9781003372011-6/competition-norms-kasia-houghton?context=ubx&refId=214196cc-d7dc-4753-b173-9aa154a0d415"
-          target="_blank"><img id="publications" src="img/m3.png" /></a>
+      <div id="vik3">
       </div>
-      <div id="vik">
-        <a href="https://peacerep.org/publication/russias-engagement-mariani-2022/" target="_blank"><img
-            id="publications" src="img/m4.png" /></a>
+      <div id="vik4">
       </div>
-      <div id="vik">
-        <a href=https://peacerep.org/publication/russia-and-china-in-liberal-peacebuilding/ target="_blank"><img
-            id="publications" src="img/m5.png" /></a>
+      <div id="vik5">
       </div>
     </div>
 
