--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="trigger eight" data-step="7">
           <p class="p6"></p>
         </div>
-        <div class="trigger nine" data-step="8">
+        <div class="nine" data-step="8" style="height: 300px;">
           <p class="p7"></p>
         </div>
         <!-- <div class="trigger ten" data-step="9">
@@ -195,6 +195,9 @@
       <div id="vik4">
       </div>
       <div id="vik5">
+      </div>
+      <div id="footer" style="position: absolute; bottom: 30px; width: 100%; text-align: center;">
+        <h5>Text: Mateja Peter and Sanja Badanjak</br>Visualisation: Tomas Vancisin</h5>
       </div>
     </div>
 
