fixes after mateja's meeting

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
     </div>
     <div id="break"></div>
 
-    <div id="separator05" class="overview">
+    <!-- <div id="separator05" class="overview">
       <div id="ch2_div">
         Research
       </div>
-    </div>
+    </div> -->
 
     <div id="separator1">
       <div style="position: absolute; top: 80px; width: 100%; text-align: center;">
@@ -197,7 +197,7 @@
       <div id="vik5">
       </div>
       <div id="footer" style="position: absolute; bottom: 30px; width: 100%; text-align: center;">
-        <h5>Text: Mateja Peter and Sanja Badanjak</br>Visualisation: Tomas Vancisin</h5>
+        <h5>Text: Mateja Peter and Sanja Badanjak</br>Data: Third Party to Peace Agreements Dataset. Sanja Badanjak and Niamh Henry (2024)</br>Visualisation: Tomas Vancisin</h5>
       </div>
     </div>
 
