--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 </head>
 
 <body>
+  <div id="initial_screen">
+    <div id="init_load">loading...</div>
+  </div>
 
   <div id="header">
     <h1 id="title_header"></h1>
@@ -149,8 +152,6 @@
         </div>
       </div>
     </div>
-
-
 
     <div id="separator05" class="overview">
       <div id="ch2_div">
