scroll indicator, scaling, layout, icons...

--- a/index.html
+++ b/index.html
@@ -28,12 +28,6 @@
     <h1 id="title_header"></h1>
     <a href="https://peacerep.org/" target="_blank"><img alt="PeaceRep Logo" id="peace_img" src="img/logo.png" /></a>
     <!-- <img id="peace_img" src="img/logo.png" alt="PeaceRep Logo" /> -->
-    <img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" />
-    <img id="and_img" src="img/image10.png" alt="Uni Logo" />
-  </div>
-
-  <div id="story">
-
     <div class="dropdown">
       <button class="dropbtn">Select Actor</button>
       <div class="dropdown-content">
@@ -43,6 +37,13 @@
         <a href="#" id="china">China</a>
       </div>
     </div>
+  </div>
+
+  <a href="https://www.st-andrews.ac.uk/" target="_blank"><img id="and_img" src="img/image10.png" alt="Uni Logo" /></a>
+  <a href="https://www.ed.ac.uk/" target="_blank"><img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" /></a>
+
+  <div id="story">
+
 
 
     <div id="separator" class="overview">
@@ -57,6 +58,25 @@
       </div>
       <div id="ch1_div">
         <h1 id="yr_active"></h1> Activity Range
+      </div>
+    </div>
+
+    <div id="indicator">
+      <svg id="indicator_svg" style="width: 20px;">
+        <line id="indicator_line" x1="8.5" y1="5" x2="8.5" style="stroke:white; stroke-width:1; opacity: 0.3" />
+        <circle id="movingCircle" cx="8.5" cy="9" r="6" style="stroke: white; fill: black;">
+      </svg>
+      <img id="bee_icon" src="img/bees.png" alt="Uni Logo" />
+      <img id="area_icon" src="img/area.png" alt="Uni Logo" />
+      <img id="globe_icon" src="img/world.png" alt="Uni Logo" />
+      <img id="chart_icon" src="img/chart.png" alt="Uni Logo" />
+      <img id="pie_icon" src="img/pie.png" alt="Uni Logo" />
+    </div>
+
+
+    <div id="separator05" class="overview">
+      <div id="ch2_div">
+        Agreements Timeline
       </div>
     </div>
 
@@ -96,7 +116,7 @@
           <p class="p4"></p>
         </div>
         <div class="trigger six" data-step="5">
-          <p class="p5"></p>
+          <p class="p5" style="background-color: black;"></p>
         </div>
         <!-- <div class="trigger seven" data-step="6">
         </div> -->
@@ -119,7 +139,7 @@
           <p class="p6"></p>
         </div>
         <div class="trigger nine" data-step="8">
-          <p class="p7"></p>
+          <p class="p7" style="background-color: black;"></p>
         </div>
         <!-- <div class="trigger ten" data-step="9">
         </div> -->
@@ -128,7 +148,7 @@
 
     <div id="separator05" class="overview">
       <div id="ch2_div">
-        Agreement Timeline
+        Comparison of Agreement Stages
       </div>
     </div>
 
@@ -148,7 +168,7 @@
           <p class="p10"></p>
         </div>
         <div class="trigger fourteen" data-step="13">
-          <p class="p11"></p>
+          <p class="p11" style="background-color: black;"></p>
         </div>
       </div>
     </div>
@@ -172,14 +192,15 @@
           <p class="p13"></p>
         </div>
         <div class="trigger seventeen" data-step="16">
-          <p13 class="p14"></p>
+          <p class="p14" style="background-color: black;"></p>
         </div>
       </div>
     </div>
     <div id="break"></div>
 
     <div id="separator1">
-      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" style="color:white"></i></button>
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"
+          style="color:white"></i></button>
       <div style="position: absolute; top: 0px; width: 100%; text-align: center;">
         <h3 id="research_header"></h3>
       </div>
