--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <div id="header">
     <h1 id="title_header"></h1>
+  </div>
     <a href="https://peacerep.org/" target="_blank"><img alt="PeaceRep Logo" id="peace_img" src="img/logo.png" /></a>
     <!-- <img id="peace_img" src="img/logo.png" alt="PeaceRep Logo" /> -->
     <div class="dropdown">
@@ -37,7 +38,6 @@
         <a href="#" id="china">China</a>
       </div>
     </div>
-  </div>
 
   <a href="https://www.st-andrews.ac.uk/" target="_blank"><img id="and_img" src="img/image10.png" alt="Uni Logo" /></a>
   <a href="https://www.ed.ac.uk/" target="_blank"><img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" /></a>
@@ -67,10 +67,15 @@
         <circle id="movingCircle" cx="8.5" cy="9" r="6" style="stroke: white; fill: black;">
       </svg>
       <img id="bee_icon" src="img/bees.png" alt="Uni Logo" />
+      <!-- <p id="time_title" style="background-color: transparent; padding: 0; font-size: 12px;">Agreement Timeline</p> -->
+
       <img id="area_icon" src="img/area.png" alt="Uni Logo" />
+      <!-- <p id="area_title" style="background-color: transparent; padding: 0; font-size: 12px;">UN Security Council</p> -->
+
       <img id="globe_icon" src="img/world.png" alt="Uni Logo" />
       <img id="chart_icon" src="img/chart.png" alt="Uni Logo" />
       <img id="pie_icon" src="img/pie.png" alt="Uni Logo" />
+      <div id="icon_tooltip"></div>
     </div>
 
 
