--- a/index.html
+++ b/index.html
@@ -26,24 +26,51 @@
 
   <div id="header">
     <h1 id="title_header"></h1>
+    <a href="https://peacerep.org/" target="_blank">
+      <img alt="PeaceRep Logo" id="peace_img" src="img/logo.png" />
+    </a>
+    <button title="Information" id="info_button"><i class="fa fa-info"></i></button>
+    <div class="dropdown">
+      <button class="dropbtn">Select Actor</button>
+      <div class="dropdown-content">
+        <a href="#" id="russia">Russia</a>
+        <a href="#" id="china">China</a>
+      </div>
+    </div>
+    <a href="https://www.st-andrews.ac.uk/" target="_blank">
+      <img id="and_img" src="img/image10.png" alt="Uni Logo" />
+    </a>
+    <a href="https://www.ed.ac.uk/" target="_blank">
+      <img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" />
+    </a>
   </div>
 
-  <a href="https://peacerep.org/" target="_blank">
-    <img alt="PeaceRep Logo" id="peace_img" src="img/logo.png" />
-  </a>
-  <div class="dropdown">
-    <button class="dropbtn">Select Actor</button>
-    <div class="dropdown-content">
-      <a href="#" id="russia">Russia</a>
-      <a href="#" id="china">China</a>
+<div id="info">
+    <div id="info_title_div">
+      <h3 style="text-align: center; margin-top: 5px; margin-bottom: 5px;">Information</h3>
+    </div>
+    <div id="info_content">
+      <p style="font-size: 14px;">
+      This database lists all agreements included on the main PA-X database that deal in some way with local
+      issues, involve local actors, and deal with forms of local/communal violent conflict. Agreements span the
+      1990 to 2024, with global coverage, forming a collection of 349 local agreements, 5 of which are new in this
+      release of PA-X Local. PA-X Local only includes agreements for which we could obtain a text and is therefore
+      neither exhaustive of all local negotiation practices, nor clearly representative of them, nor of the range
+      of armed actors and groups involved in local agreement-making. While it is likely to therefore reflect some
+      processes more than others, it forms a useful qualitative tool for beginning to understand local processes
+      and is the only database that we know of to currently do this.
+      </p>
+      </br>
+      <p style="font-size: 12px;">Credits: <br> Data Preparation by Niamh Henry, University of Edinburgh
+        <br>Vizualization by Tomas Vancisin, University of Edinburgh <br><br>
+        Data Citation:<br> Bell, Christine, Sanja Badanjak, Laura Wise, Monalisa Adhikari,
+        Juline Beaujouan, Margherita Distrotti, Tim Epple, Robert Forster, Robert Wilson, and Laura Wise (2024).
+        PA-X Local Peace Agreements Database and Dataset, Version 5.
+        <a id="first_link" target="_blank" href="https://pax.peaceagreements.org/agreements/lsearch">Link</a>.
+      </p>
     </div>
   </div>
-  <a href="https://www.st-andrews.ac.uk/" target="_blank">
-    <img id="and_img" src="img/image10.png" alt="Uni Logo" />
-  </a>
-  <a href="https://www.ed.ac.uk/" target="_blank">
-    <img id="uoe_img" src="img/unilogo.png" alt="Uni Logo" />
-  </a>
+
 
   <div id="story">
 
