--- a/index.html
+++ b/index.html
@@ -51,14 +51,7 @@
     </div>
     <div id="info_content">
       <p style="font-size: 14px;">
-      This database lists all agreements included on the main PA-X database that deal in some way with local
-      issues, involve local actors, and deal with forms of local/communal violent conflict. Agreements span the
-      1990 to 2024, with global coverage, forming a collection of 349 local agreements, 5 of which are new in this
-      release of PA-X Local. PA-X Local only includes agreements for which we could obtain a text and is therefore
-      neither exhaustive of all local negotiation practices, nor clearly representative of them, nor of the range
-      of armed actors and groups involved in local agreement-making. While it is likely to therefore reflect some
-      processes more than others, it forms a useful qualitative tool for beginning to understand local processes
-      and is the only database that we know of to currently do this.
+        text here
       </p>
       </br>
       <p style="font-size: 12px;">Credits: <br> Data Preparation by Niamh Henry, University of Edinburgh
