--- a/index.html
+++ b/index.html
@@ -45,21 +45,33 @@
     </a>
   </div>
 
-<div id="info">
+  <div id="info">
     <div id="info_title_div">
       <h3 style="text-align: center; margin-top: 5px; margin-bottom: 5px;">Information</h3>
     </div>
     <div id="info_content">
       <p style="font-size: 14px;">
-        text here
+        This scrollytelling application presents trends and analysis on Russia and China as third party signatories in
+        international/national peace agreements contained in PA-X Peace Agreements Database version 8 (1990-2023).
+        Select an actor using the drop down in the header, and scroll along the left side of your screen to display the
+        next chapter. Skip to a specific part of the story using the icons along the left.
+        The stories provide an overview of temporal trends and comparisons to other members of the UN Security Council,
+        trends of the actors involvement by stage of process, and the geographical spread of their involvement as a
+        third party to peace agreements.
+        For more on PA-X fields and definitions, see <a
+          href="https://pax.peaceagreements.org/cms/documents/3956/PA_X_codebook_v8.pdf" , target="_blank">PA-X Codebook</a>
       </p>
       </br>
-      <p style="font-size: 12px;">Credits: <br> Data Preparation by Niamh Henry, University of Edinburgh
-        <br>Vizualization by Tomas Vancisin, University of Edinburgh <br><br>
-        Data Citation:<br> Bell, Christine, Sanja Badanjak, Laura Wise, Monalisa Adhikari,
-        Juline Beaujouan, Margherita Distrotti, Tim Epple, Robert Forster, Robert Wilson, and Laura Wise (2024).
-        PA-X Local Peace Agreements Database and Dataset, Version 5.
-        <a id="first_link" target="_blank" href="https://pax.peaceagreements.org/agreements/lsearch">Link</a>.
+      <p style=" font-size: 12px;">Credits: <br>
+          Textual Analysis by Mateja Peter, PeaceRep (University of St Andrews)
+          <br>
+          Visualization by Tomas Vancisin, PeaceRep (University of Edinburgh)
+          <br>
+          Data Preparation by Niamh Henry, PeaceRep (University of Edinburgh)
+          <br>
+          <br>
+          Data:<br> Sanja Badanjak and Niamh Henry, Third Parties in Peace Agreements Dataset (2024), PeaceRep
+          (University of Edinburgh) [Forthcoming]
       </p>
     </div>
   </div>
