--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKVDN70B13"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-GKVDN70B13'); </script>
   <title>PeaceRep</title>
   <link rel="icon" href="data:;base64,iVBORwOKGO=" />
   <link rel="stylesheet" href="css/style.css" />
@@ -45,7 +47,7 @@
     </a>
   </div>
 
-<div id="info">
+  <div id="info">
     <div id="info_title_div">
       <h3 style="text-align: center; margin-top: 5px; margin-bottom: 5px;">Information</h3>
     </div>
